--- a/data visualization/html/index.html
+++ b/data visualization/html/index.html
@@ -8,10 +8,13 @@
     <script type="text/javascript" src="../js/echarts.js"></script>
     <script type="text/javascript" src="../js/echarts-gl.min.js"></script>
     <script type="text/javascript" src="../js/echarts-wordcloud.min.js"></script>
+    <script type="text/javascript" src="../js/mysql.js"></script>
     <script type="text/javascript" src="../js/index.js"></script>
     <script type="text/javascript" src="../js/timing.js"></script>
     <script type="text/javascript" src="../js/schedule.js"></script>
     <script type="text/javascript" src="../js/courses.js"></script>
+    <script type="text/javascript" src="../js/scatter.js"></script>
+
 </head>
 
 <body>
@@ -33,6 +36,7 @@
                     <li class="nav-tab active" onclick="getTiming()" id="timing"><a href="#timing">Timing </a></li>
                     <li class="nav-tab" onclick="getSchedule()" id="schedule"><a href="#schedule">Schedule</a></li>
                     <li class="nav-tab" onclick="getCourses()" id="courses"><a href="#courses">Courses</a></li>
+                    <li class="nav-tab" onclick="getScatter()" id="scatter"><a href="#scatter">Scatter</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
                     <div class="form-group">
