try for sankey and energy.json

--- a/data visualization/html/index.html
+++ b/data visualization/html/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="../js/schedule.js"></script>
     <script type="text/javascript" src="../js/courses.js"></script>
     <script type="text/javascript" src="../js/scatter.js"></script>
+    <script type="text/javascript" src="../js/sankey.js"></script>
 
 </head>
 
@@ -37,6 +38,8 @@
                     <li class="nav-tab" onclick="getSchedule()" id="schedule"><a href="#schedule">Schedule</a></li>
                     <li class="nav-tab" onclick="getCourses()" id="courses"><a href="#courses">Courses</a></li>
                     <li class="nav-tab" onclick="getScatter()" id="scatter"><a href="#scatter">Scatter</a></li>
+                    <li class="nav-tab" onclick="getSankey()" id="sankey"><a href="#sankey">Sankey</a></li>
+                
                 </ul>
                 <form class="navbar-form navbar-right">
                     <div class="form-group">
