--- a/data visualization/html/index.html
+++ b/data visualization/html/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="../js/echarts.js"></script>
     <script type="text/javascript" src="../js/echarts-gl.min.js"></script>
     <script type="text/javascript" src="../js/echarts-wordcloud.min.js"></script>
+    <script type="text/javascript" src="../js/echarts-liquidfill.js"></script>
+    
     <script type="text/javascript" src="../js/mysql.js"></script>
     <script type="text/javascript" src="../js/index.js"></script>
     <script type="text/javascript" src="../js/timing.js"></script>
@@ -15,6 +17,7 @@
     <script type="text/javascript" src="../js/courses.js"></script>
     <script type="text/javascript" src="../js/scatter.js"></script>
     <script type="text/javascript" src="../js/sankey.js"></script>
+    <script type="text/javascript" src="../js/about.js"></script>
 
 </head>
 
@@ -39,7 +42,7 @@
                     <li class="nav-tab" onclick="getCourses()" id="courses"><a href="#courses">Courses</a></li>
                     <li class="nav-tab" onclick="getScatter()" id="scatter"><a href="#scatter">Scatter</a></li>
                     <li class="nav-tab" onclick="getSankey()" id="sankey"><a href="#sankey">Sankey</a></li>
-                
+                    <li class="nav-tab" onclick="getAbout()" id="about"><a href="#about">About</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
                     <div class="form-group">
@@ -55,7 +58,6 @@
     <div class="content">
         <div id="tab-plane" style="width: 100%;height:500px;"></div>
     </div>
-    <!-- <div id="main" style="width: 600px;height:400px;"></div> -->
 </body>
 <footer>
     <link rel="stylesheet" href="../css/bootstrap.css">
