modify UI and add dropdown selectors

--- a/data visualization/html/index.html
+++ b/data visualization/html/index.html
@@ -55,7 +55,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="content">
+    <div class="content text-center" >
         <div id="tab-plane" style="width: 100%;height:500px;"></div>
     </div>
 </body>
