--- a/data visualization/html/index.html
+++ b/data visualization/html/index.html
@@ -37,12 +37,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" id="mytab">
-                    <li class="nav-tab active" onclick="getTiming()" id="timing"><a href="#timing">Timing </a></li>
-                    <li class="nav-tab" onclick="getSchedule()" id="schedule"><a href="#schedule">Schedule</a></li>
+                    <!-- <li class="nav-tab active" onclick="getTiming()" id="timing"><a href="#timing">Timing </a></li> -->
+                    <!-- <li class="nav-tab" onclick="getSchedule()" id="schedule"><a href="#schedule">Schedule</a></li> -->
+                    <li class="nav-tab" onclick="getAbout()" id="about"><a href="#about">About</a></li>
                     <li class="nav-tab" onclick="getCourses()" id="courses"><a href="#courses">Courses</a></li>
                     <li class="nav-tab" onclick="getScatter()" id="scatter"><a href="#scatter">Scatter</a></li>
                     <li class="nav-tab" onclick="getSankey()" id="sankey"><a href="#sankey">Sankey</a></li>
-                    <li class="nav-tab" onclick="getAbout()" id="about"><a href="#about">About</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
                     <div class="form-group">
@@ -55,7 +55,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="content text-center" >
+    <div class="content text-right" >
         <div id="tab-plane" style="width: 100%;height:500px;"></div>
     </div>
 </body>
